# RustRAG

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  MCP-RU.md  MCP.md  Makefile  README-RU.md  README.md  clippy.toml  docker-compose-gitlab.yml  docker-compose-local.yml  docker-compose-s4.yml  docker-compose.yml  install.sh  rust-toolchain.toml
apps/api/: .env.example  Cargo.toml  Dockerfile  build.rs
apps/api/benchmarks/grounded_query/: README.md  api_baseline_suite.json  compare_benchmarks.py  golden_code_suite.json  golden_infrastructure_suite.json  golden_multiformat_suite.json  golden_programming_suite.json  golden_protocols_suite.json  graph_multihop_suite.json  layout_noise_suite.json  multiformat_surface_suite.json  run_live_benchmark.py  workflow_strict_suite.json
apps/api/benchmarks/grounded_query/corpus/: graph_database_wikipedia.md  information_retrieval_wikipedia.md  knowledge_graph_wikipedia.md  large_language_model_wikipedia.md  question_answering_wikipedia.md  retrieval_augmented_generation_wikipedia.md  runtime_upload_check.docx  (+1 more)
apps/api/contracts/: ironrag.openapi.yaml  rustrag.openapi.yaml
apps/api/docker/: runtime-entrypoint.sh
apps/api/migrations/: 0001_init.sql  0002_document_summaries.sql  0003_community_detection.sql  0003_schema_rollup.sql  0004_library_extraction_prompt.sql
apps/api/src/: app.rs  main.rs  mcp_types.rs
apps/api/src/agent_runtime/: default_policy.rs  executor.rs  persistence.rs  registry.rs  task.rs
apps/api/src/app/: bootstrap.rs  config.rs  mod.rs  state.rs
apps/api/src/domains/: audit.rs  catalog.rs  content.rs  iam.rs  ingest.rs  knowledge.rs  mod.rs  ops.rs  provider_profiles.rs  query.rs  query_ir.rs  runtime_graph.rs  runtime_ingestion.rs
apps/api/src/infra/: mod.rs  persistence.rs  repositories.rs
apps/api/src/integrations/: llm.rs
apps/api/src/interfaces/: http.rs  shell.rs
apps/api/src/services/: ai_catalog_service.rs  audit_service.rs  billing_service.rs  catalog_service.rs  community_detection.rs  content_service.rs  content_storage.rs  entity_resolution.rs  extract_service.rs  graph_extract.rs  graph_identity.rs  graph_merge.rs  graph_projection.rs  graph_projection_guard.rs  graph_quality_guard.rs  graph_rebuild.rs  graph_reconciliation_scope.rs  graph_service.rs  graph_summary.rs  iam_service.rs  ingest_activity.rs  ingest_service.rs  ingestion_worker.rs  knowledge_service.rs  mcp_access.rs  mcp_mutations.rs  mcp_support.rs  mod.rs  ops_service.rs  provider_failure_classification.rs  query_execution.rs  query_planner.rs  query_service.rs  query_support.rs  runtime_graph_read.rs  runtime_ingestion.rs  structured_preparation_service.rs  technical_fact_service.rs  web_ingest_service.rs
apps/api/src/shared/: auth_tokens.rs  chunking.rs  extraction.rs  file_extract.rs  json_coercion.rs  mod.rs  provenance.rs  retry.rs  similarity.rs  slugs.rs  status.rs  structured_document.rs  technical_facts.rs  telemetry.rs  text_render.rs  url_identity.rs  web_ingest.rs
apps/api/tests/: arango_contracts.rs  arango_support.rs  audit_events.rs  billing_rollups.rs  bootstrap_stack.rs  content_lifecycle.rs  content_repository.rs  content_revision_lineage.rs  extract_graph.rs  extract_repository.rs  governance_auth.rs  graph_projection_repository.rs  greenfield_bootstrap.rs  greenfield_contracts.rs  greenfield_support.rs  ingest_attempts.rs  ingest_repository.rs  knowledge_lifecycle.rs  knowledge_search.rs  mcp_knowledge.rs  mcp_memory_contracts.rs  mcp_memory_permissions.rs  mcp_memory_reads.rs  mcp_memory_search.rs  ops_state.rs  query_compiler_openai_smoke.rs  query_grounding.rs  query_ir_golden.jsonl  structured_preparation.rs  web_ingest_contracts.rs  web_ingest_recursive_crawl.rs  web_ingest_repository.rs  web_ingest_single_page.rs  web_ingest_visibility.rs
apps/api/tests/support/: content_lifecycle_support.rs  iam_token_support.rs  structured_document_fixtures.rs  technical_query_cases.rs  web_ingest_fixture.rs  web_ingest_support.rs
backend/: Cargo.toml  Dockerfile  Makefile  build.rs
backend/contracts/: rustrag.openapi.yaml
backend/migrations/: 0001_init.sql  0002_typed_agent_runtime.sql
backend/src/: lib.rs  mcp_types.rs
backend/src/agent_runtime/: builder.rs  hooks.rs  mod.rs  persistence.rs  policy.rs  request.rs  response.rs  trace.rs
backend/src/agent_runtime/pipeline/: mod.rs
backend/src/agent_runtime/tasks/: graph_extract.rs  mod.rs  query_plan.rs  technical_fact_extract.rs
backend/src/app/: bootstrap.rs  config.rs  mod.rs  shutdown.rs  state.rs
backend/src/domains/: agent_runtime.rs  ai.rs  billing.rs  extract.rs  graph_quality.rs  query.rs
backend/src/infra/: persistence.rs
backend/src/infra/arangodb/: bootstrap.rs  document_store.rs  graph_store.rs
backend/src/infra/repositories/: audit_repository.rs  billing_repository.rs  mod.rs  query_repository.rs  runtime_graph_repository.rs
backend/src/integrations/: llm.rs
backend/src/interfaces/http/: audit.rs  authorization.rs  knowledge.rs  mcp.rs  mod.rs  query.rs  router_support.rs  runtime.rs
backend/src/services/: ai_catalog_service.rs  audit_service.rs  billing_service.rs  content_service.rs  extraction_recovery.rs  graph_extract.rs  graph_merge.rs  graph_projection.rs  graph_rebuild.rs  graph_service.rs  graph_summary.rs  iam_service.rs  ingestion_worker.rs  knowledge_service.rs  mcp_access.rs  mcp_mutations.rs  mod.rs  query_execution.rs  query_planner.rs  query_service.rs  query_support.rs  runtime_graph_read.rs  runtime_ingestion.rs  search_service.rs  structured_preparation_service.rs
backend/tests/: billing_rollups.rs  extract_repository.rs  governance_auth.rs  mcp_knowledge.rs  mcp_memory_audit.rs  mcp_memory_contracts.rs  mcp_memory_mutations.rs  mcp_memory_permissions.rs  mcp_memory_repository.rs  mcp_memory_support.rs  ops_state.rs  query_grounding.rs
crates/contracts/: Cargo.toml
crates/contracts/src/: admin.rs  apiref.rs  assistant.rs  auth.rs  diagnostics.rs  documents.rs  graph.rs  lib.rs  shell.rs
crates/contracts/tests/: serde_surfaces.rs
(+440 files in other folders)
