[workspace]
resolver = "2"
members = [
    "apps/api",
    "crates/contracts",
]

[workspace.package]
version = "0.3.2"
edition = "2024"
rust-version = "1.95"
license = "MIT"

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.23", features = ["serde", "v7"] }

[profile.profiling]
inherits = "release"
debug = 1
strip = false
