[package]
name = "ironrag-backend"
version.workspace = true
edition = "2024"
rust-version.workspace = true
license = "MIT"
build = "build.rs"

[features]
default = []

[lints.rust]
unsafe_code = "forbid"
unused_lifetimes = "deny"
unused_attributes = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "allow", priority = -1 }
nursery = { level = "allow", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
print_stdout = "deny"
print_stderr = "deny"
result_large_err = "allow"
clone_on_copy = "allow"
collapsible_if = "allow"
default_constructed_unit_structs = "allow"
double_ended_iterator_last = "allow"
large_enum_variant = "allow"
let_unit_value = "allow"
manual_inspect = "allow"
manual_pattern_char_comparison = "allow"
manual_contains = "allow"
needless_borrow = "allow"
needless_lifetimes = "allow"
needless_question_mark = "allow"
obfuscated_if_else = "allow"
should_implement_trait = "allow"
unnecessary_lazy_evaluations = "allow"

[dependencies]
axum = { version = "0.8", features = ["macros", "json", "multipart"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.15"
http = "1"
reqwest = { version = "0.13", features = ["json", "rustls"] }
semver = "1"
genai = "0.6.0-beta.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate", "macros", "rust_decimal"] }
thiserror = "2.0"
tokio = { version = "1.51", features = ["macros", "rt-multi-thread", "signal", "sync", "net", "time", "io-util"] }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs", "compression-gzip", "compression-br", "compression-zstd"] }
axum-prometheus = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"] }
uuid = { version = "1.23", features = ["v5", "v7", "serde"] }
redis = { version = "1.2", features = ["tokio-comp"] }
anyhow = "1.0"
futures = "0.3"
http-body-util = "0.1"
sha2 = "0.11"
hex = "0.4"
async-trait = "0.1"
aws-sdk-s3 = "1"
rust_decimal = { version = "1", features = ["serde"] }
cookie = "0.18"
argon2 = "0.5"
lopdf = "0.40.0"
calamine = "0.34.0"
csv = "1.4.0"
roxmltree = "0.21.1"
zip = { version = "8.5.0", default-features = false, features = ["deflate"] }
tree-sitter = "0.25"
# Tier 1: mainstream languages
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-bash = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.23"
# Tier 2: common in technical docs
tree-sitter-swift = "0.7"
# tree-sitter-kotlin removed: depends on tree-sitter 0.20, incompatible with 0.25
tree-sitter-scala = "0.23"
tree-sitter-sql = "0.0.2"
tree-sitter-yaml = "0.7"
tree-sitter-toml = "0.20"
tree-sitter-dockerfile = "0.2"
tree-sitter-proto = "0.4"
# Config parsing (structural, not tree-sitter)
serde_yaml = "0.9"
toml_edit = { version = "0.22", features = ["serde"] }
tokio-tar = "0.3"
async-compression = { version = "0.4", features = ["zstd", "tokio"] }
base64 = "0.22.1"
tempfile = "3.27.0"
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "webp", "gif", "bmp", "tiff"] }
png = "0.18.1"
scraper = "0.26.0"
encoding_rs = "0.8.35"
unicode-normalization = "0.1"
url = "2"
ironrag-contracts = { path = "../../crates/contracts" }
clap = { version = "4", features = ["derive"] }
rand = "0.9"
percent-encoding = "2"

[[bin]]
name = "ironrag-cli"
path = "src/bin/ironrag_cli.rs"

[[bin]]
name = "ironrag-embed-chunks-backfill"
path = "src/bin/embed_chunks_backfill.rs"

[[bin]]
name = "ironrag-promote-null-heads"
path = "src/bin/promote_null_heads.rs"

[[bin]]
name = "ironrag-gc-stale-chunks"
path = "src/bin/gc_stale_chunks.rs"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
yaml-rust2 = "0.10.4"
